# Hybrid-Chain-Quorum-Replication-Protocol

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/core/: message.h  node.h
include/network/: network_manager.h
include/performance/: metrics.h
include/protocols/: chain_replication.h  hybrid_protocol.h  quorum_replication.h
include/utils/: logger.h
scripts/: build.sh  run_cluster.sh
src/: benchmark.cpp  main.cpp
src/core/: message.cpp  node.cpp
src/network/: network_manager.cpp
src/performance/: metrics.cpp
src/protocols/: chain_replication.cpp  hybrid_protocol.cpp  quorum_replication.cpp
src/utils/: logger.cpp
tests/: test_chain_replication.cpp  test_hybrid_protocol.cpp  test_main.cpp  test_performance.cpp  test_quorum_replication.cpp
